// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`N8nDropdownMenu > disabled state > should render trigger with disabled attribute 1`] = `
<button
  aria-disabled="true"
  aria-expanded="false"
  aria-haspopup="menu"
  aria-live="polite"
  class="button button ghost xsmall iconOnly disabled is-disabled"
  data-disabled=""
  data-icon-only="true"
  data-state="closed"
  disabled=""
  id="reka-dropdown-menu-trigger-v-0"
  type="button"
>
  <transition-stub
    appear="false"
    css="true"
    name="n8n-button-fade"
    persisted="false"
  >
    <!--v-if-->
  </transition-stub>
  <div
    class="button-inner"
  >
    
    <svg
      aria-hidden="true"
      class="n8n-icon"
      data-icon="ellipsis"
      focusable="false"
      height="10px"
      role="img"
      viewBox="0 0 24 24"
      width="10px"
    >
      <g
        fill="none"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
      >
        <circle
          cx="12"
          cy="12"
          r="1"
        />
        <circle
          cx="19"
          cy="12"
          r="1"
        />
        <circle
          cx="5"
          cy="12"
          r="1"
        />
      </g>
    </svg>
    
    
    
  </div>
</button>
`;

exports[`N8nDropdownMenu > rendering > should render default trigger button 1`] = `
<button
  aria-expanded="false"
  aria-haspopup="menu"
  aria-live="polite"
  class="button button ghost xsmall iconOnly"
  data-icon-only="true"
  data-state="closed"
  id="reka-dropdown-menu-trigger-v-0"
  type="button"
>
  <transition-stub
    appear="false"
    css="true"
    name="n8n-button-fade"
    persisted="false"
  >
    <!--v-if-->
  </transition-stub>
  <div
    class="button-inner"
  >
    
    <svg
      aria-hidden="true"
      class="n8n-icon"
      data-icon="ellipsis"
      focusable="false"
      height="10px"
      role="img"
      viewBox="0 0 24 24"
      width="10px"
    >
      <g
        fill="none"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
      >
        <circle
          cx="12"
          cy="12"
          r="1"
        />
        <circle
          cx="19"
          cy="12"
          r="1"
        />
        <circle
          cx="5"
          cy="12"
          r="1"
        />
      </g>
    </svg>
    
    
    
  </div>
</button>
`;

exports[`N8nDropdownMenu > rendering > should render with emoji activator 1`] = `
<button
  aria-expanded="false"
  aria-haspopup="menu"
  aria-live="polite"
  class="button button ghost xsmall iconOnly"
  data-icon-only="true"
  data-state="closed"
  id="reka-dropdown-menu-trigger-v-0"
  type="button"
>
  <transition-stub
    appear="false"
    css="true"
    name="n8n-button-fade"
    persisted="false"
  >
    <!--v-if-->
  </transition-stub>
  <div
    class="button-inner"
  >
    
    🎉
    
    
    
  </div>
</button>
`;
